✨ 信頼するユーザーを取得
