# backend/docs/swagger.json
@@ -689,15 +689,6 @@
                     "receivers"
                 ],
                 "summary": "相続人の一覧取得",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ユーザーID",
-                        "name": "userId",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1610,7 +1601,13 @@
         "handlers.ReceiverResponse": {
             "type": "object",
             "properties": {
+                "clerkUserId": {
+                    "type": "string"
+                },
                 "email": {
+                    "type": "string"
+                },
+                "iconUrl": {
                     "type": "string"
                 },
                 "id": {
